settings alignment issue fix for portrait mode + react member

--- a/docroot/react/src/components/settings/settings.less
+++ b/docroot/react/src/components/settings/settings.less
@@ -97,6 +97,14 @@
             }
         }
     }
+    .show-peripherals{
+        left: 0;
+        transition: 1s;
+    }
+    .hide-peripherals{
+        left: -620px;
+        transition: 1s;
+    }
 }
 @media only screen and (max-width: 1024px) and (orientation: landscape) {
     .setting-peripherals {
